update my portfolio page and add the more project in that and fix some overflowing issues

--- a/codsoft_task2 (MyPortfolio)/style.css
+++ b/codsoft_task2 (MyPortfolio)/style.css
@@ -55,10 +55,15 @@ html{
     color: white;
 }
 
+/* all anchro reset underline starting */
+a{
+    text-decoration: none;
+}
+
 /*     *****Header Styling starts*****      */
 .header { 
     height: 10vh;
-    width:100vw ;
+    width:100%;
     padding: 2rem 4rem;
     display: flex;  
     justify-content: space-between;
@@ -171,7 +176,7 @@ header nav{
  /* Hero Section styling start */
 .hero-section{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     position: relative;
     background:  url(./Assets/hero-bg.png);
     background-size: cover;
@@ -830,7 +835,7 @@ header nav{
 /* Footer Section Styling start*/
 footer{
     height: 10vh;
-    width:100vw ;
+    width:100% ;
     background-color: var(--bg-color-black-light);
     display: flex;
     justify-content: center;
